...
      place the field order is written down.
    -->
    <item name="nearby_lobby_row_friend_name" type="id" />
    <item name="nearby_lobby_row_identity_fingerprint" type="id" />
    <item name="nearby_lobby_row_authority_capability" type="id" />
    <item name="nearby_lobby_row_resource_risk" type="id" />
    <item name="nearby_lobby_row_network_owner" type="id" />
    <item name="nearby_lobby_row_seat" type="id" />
    <item name="nearby_lobby_row_rom_identity" type="id" />
    <item name="nearby_lobby_row_rom_local_state" type="id" />
    <item name="nearby_lobby_row_rom_transfer_confirm" type="id" />
    <item name="nearby_lobby_row_rom_transfer_progress" type="id" />
    <item name="nearby_lobby_row_profile_verified" type="id" />
    <item name="nearby_lobby_row_mode_expected" type="id" />
    <item name="nearby_lobby_row_local_audio" type="id" />
...
    <item name="nearby_ingame_banner_row_frozen" type="id" />
    <item name="nearby_ingame_banner_row_reconnect_countdown" type="id" />
    <item name="nearby_ingame_banner_row_authority_timeout" type="id" />
    <item name="nearby_ingame_banner_row_takeover" type="id" />
    <item name="nearby_ingame_banner_row_continue_solo" type="id" />
    <item name="nearby_ingame_banner_row_save_and_end" type="id" />
    <item name="nearby_lobby_details" type="id" />
    <item name="nearby_lobby_details_rows" type="id" />
</resources>

